@@ -2,6 +2,7 @@ package com.mycourse.elearningplatform.config;
 
 import com.mycourse.elearningplatform.security.jwt.JwtAuthFilter;
 import com.mycourse.elearningplatform.security.UserDetailsServiceImpl;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -18,18 +19,21 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
-@EnableMethodSecurity // Enables @PreAuthorize, etc.
+@EnableMethodSecurity
 public class SecurityConfig {
 
     private final UserDetailsServiceImpl userDetailsService;
     private final JwtAuthFilter jwtAuthFilter;
 
-    // Constructor injection
+    @Value("${spring.web.cors.allowed-origins}")
+    private String allowedOrigins;
+
     public SecurityConfig(UserDetailsServiceImpl userDetailsService, JwtAuthFilter jwtAuthFilter) {
         this.userDetailsService = userDetailsService;
         this.jwtAuthFilter = jwtAuthFilter;
@@ -48,47 +52,63 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(withDefaults()) // ✅
+                .cors(withDefaults())
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        // Public endpoints - NO authentication required
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Allow all OPTIONS requests
                         .requestMatchers("/").permitAll()
+                        .requestMatchers("/error").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/courses/**").permitAll()
-                        .requestMatchers("/api/users/stats").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/courses/**").permitAll() // Only GET requests are public
+                        .requestMatchers(HttpMethod.GET, "/api/users/stats").permitAll()
+                        
+                        // Protected endpoints - Authentication required
                         .requestMatchers("/api/users/me").authenticated()
-                        .requestMatchers("/api/users/debug/**").authenticated()
-                        .requestMatchers("/api/users/teacher-dashboard").hasRole("TEACHER")
-                        .requestMatchers("/api/users/teacher-dashboard/**").hasRole("TEACHER")
                         .requestMatchers("/api/enrollments/**").authenticated()
                         .requestMatchers("/api/upload/**").authenticated()
                         .requestMatchers("/api/quizzes/**").authenticated()
                         .requestMatchers("/api/progress/**").authenticated()
+                        
+                        // Role-based endpoints
+                        .requestMatchers("/api/users/teacher-dashboard/**").hasRole("TEACHER")
                         .requestMatchers("/api/teacher/**").hasRole("TEACHER")
                         .requestMatchers("/api/student/**").hasRole("STUDENT")
+                        .requestMatchers(HttpMethod.POST, "/api/courses/**").hasRole("TEACHER")
+                        .requestMatchers(HttpMethod.PUT, "/api/courses/**").hasRole("TEACHER")
+                        .requestMatchers(HttpMethod.DELETE, "/api/courses/**").hasRole("TEACHER")
+                        
+                        // Legacy file serving (though we use Nhost now)
                         .requestMatchers("/uploads/**").permitAll()
+                        
+                        // Proxy endpoints for file serving
+                        .requestMatchers("/api/proxy/**").permitAll()
+                        
+                        // Default: require authentication
                         .anyRequest().authenticated()
                 );
 
-        // ✅ Register the JwtAuthFilter in the filter chain
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173", "http://localhost:5174")); // Adjust if deployed
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Use origins from application.properties
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+        
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setMaxAge(3600L); // Cache preflight for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-
 }
